Bug 89802 - ODF import: text frame with draw:fill-gradient-name="" lost
Summary: ODF import: text frame with draw:fill-gradient-name="" lost
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: Other Linux (All)
: medium critical
Assignee: Michael Stahl
URL:
Whiteboard: odf target:5.0.0 target:4.4.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2015-03-03 14:11 UTC by Massimo B.
Modified: 2016-02-26 23:07 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
ODT file reproducing the missing blue colored headline (11.02 KB, application/vnd.oasis.opendocument.text)
2015-03-03 14:11 UTC, Massimo B.
Details
PDF export of 4.3.5.2 showing the correct output (10.67 KB, application/pdf)
2015-03-03 14:13 UTC, Massimo B.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Massimo B. 2015-03-03 14:11:04 UTC
Created attachment 113849 [details]
ODT file reproducing the missing blue colored headline

Hi.

I have a lot of documents created since earlier versions, recently edited with 4.3.5.2 without issues. Now after upgrading to 4.4.1.2 the colored headers are missing.

I'm able to reproduce with these 2 versions and a fresh sample file attached. I also attached the pdf export from 4.3.5.2.

As I'm not able to continue on these documents with 4.4.1.2 and I was forced to roll back to the 4.3.5.2 version, I set this to "critical".

This is self compiled libreoffice on Gentoo Linux @amd64.
Comment 1 Massimo B. 2015-03-03 14:13:15 UTC
Created attachment 113850 [details]
PDF export of 4.3.5.2 showing the correct output

I'm not going to attach the PDF export from 4.4.1.2 because it just has a white page...
Comment 2 Cor Nouws 2015-03-03 16:39:07 UTC
Hi Massimo,

Confirm: background visible in 4.3.3
Not visible in 4.4.x

To be bibisected
Comment 3 Matthew Francis 2015-03-17 04:53:58 UTC
The attached file fails to load for me from mid bibisect-43all:
 9d57c189d74551d2b3770cc81139ea10a62e672f is the first bad commit
commit 9d57c189d74551d2b3770cc81139ea10a62e672f
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Mon May 12 05:19:54 2014 +0000

    source-hash-5b5e62650354788e50b44f32c22b687b2018aba9


This was most probably the below commit:

commit 6e61ecd09679a66060f932835622821d39e92f01
Author:     Armin Le Grand <alg@apache.org>
AuthorDate: Wed Mar 19 16:17:02 2014 +0000
Commit:     Miklos Vajna <vmiklos@collabora.co.uk>
CommitDate: Fri Mar 28 14:31:08 2014 +0100

    Merge back branch alg_writerframes to trunk
    
    (cherry picked from commit b635b4fa4e42053d30ab639643d2236a20243f62)


Later, in mid 4.5 master it started to load again but without the header

  2014-12-11: source-hash-6e91763769a562b88882a4c2a94b1367c6ed4866

Based on the debug output when loading, this was probably the below commit, which prevented the crash but didn't do anything to the underlying cause

commit b86f5530161a417d31e28e75408ee80352fadad7
Author: Michael Stahl <mstahl@redhat.com>
Date:   Wed Dec 10 14:10:16 2014 +0100

    fdo#87110: xmloff: don't catch IllegalArgumentException here


bug 86578 is another bug relating to commit 6e61ecd09679a66060f932835622821d39e92f01

Adding Cc: to vmiklos@collabora.co.uk, mstahl@redhat.com. Can anything be done about this? Thanks
Comment 4 Commit Notification 2015-04-07 21:01:58 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=db1d278dcc308c73eb5edebc20481c96e7f479d8

tdf#89802: xmloff: fix ODF import of frame with empty style name ref

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Stahl 2015-04-07 21:04:51 UTC
fixed on master
Comment 6 Commit Notification 2015-04-09 09:00:42 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8dd46ca71dd8dcdb7fe52421392f02cde0d77f8a&h=libreoffice-4-4

tdf#89802: xmloff: fix ODF import of frame with empty style name ref

It will be available in 4.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Robinson Tryon (qubit) 2015-12-17 08:48:00 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]