tdf#89802: xmloff: fix ODF import of frame with empty style name ref

draw:fill-gradient-name="" in the graphic properties now causes
BaseFrameProperties_Impl::FillBaseProperties() to fail and prevent
insertion of the SwXTextFrame.

(regression from 6e61ecd09679a66060f932835622821d39e92f01)

Change-Id: I9b4f3ddb0f0e1b3a80e86bbdc1af2dade1c8edf7